address alignment issues, add CSS animation to index.html

--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,48 @@ footer {
   animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
+#sails {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+@keyframes boat-move-1 {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+@keyframes boat-move-2 {
+  from {transform: translate(-250px,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+.boat3-green {
+  animation: 20s boat-move-1 infinite alternate linear;
+}
+
+.boat1-red {
+  animation: 30s boat-move-2 infinite alternate linear;
+}
+
+@keyframes boat-move-reverse-1 {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(-100px, 48px);}
+}
+
+@keyframes boat-move-reverse-2 {
+  from {transform: translate(200px,48px);}
+  to {transform: translate(10px, 48px);}
+}
+
+.boat4 {
+  animation: 34s boat-move-reverse-1 infinite alternate linear;
+}
+
+.boat2 {
+  animation: 44s boat-move-reverse-2 infinite alternate linear;
+}
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
@@ -386,8 +428,8 @@ Large devices (1024px or larger)
 
   .col-lg-7 {
     width: 60%;
-    text-align: left;
   }
+
   .col-lg-5 {
     width: 40%;
   }
